# vitest-paths-repro

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.mjs
bazel_tools/: BUILD.bazel  defs.bzl
bazel_tools/node/: index.bzl  node_test_wrapper.sh  node_wrapper.sh  testing.bzl  typescript.bzl  unity_js_binary.bzl  unity_js_test.bzl  vitest_test.bzl
patches/: aspect_rules_js+unity-module-link.patch
trumid/common/rxjs/: BUILD.bazel
trumid/common/rxjs/merge-with-set-diff/: merge-with-set-diff.ts
trumid/common/rxjs/operators/: index.ts
trumid/common/rxjs/operators/map-set-difference/: map-set-difference.ts
trumid/common/rxjs/operators/merge-snapshot/: merge-snapshot.spec.ts  merge-snapshot.ts
trumid/common/rxjs/operators/pairwise-with/: pairwise-with.spec.ts  pairwise-with.ts
trumid/common/testing/vitest/: BUILD.bazel  create-mock.ts  fake-schedulers.ts  marbles.ts
trumid/common/utils/collection/node/: BUILD.bazel  filter.ts
