load("@aspect_rules_ts//ts:defs.bzl", "ts_config")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)

# js_library(
#     name = "vitest_config",
#     testonly = True,
#     srcs = ["vitest.config.mjs"],
#     visibility = ["//visibility:public"],
#     deps = [
#         "//:node_modules/@vitest/coverage-istanbul",
#         "//:node_modules/unplugin-swc",
#         "//:node_modules/vite",
#         "//:node_modules/vite-tsconfig-paths",
#         "//:node_modules/vitest",
#     ],
# )
